--- a/weechat_irc.conf
+++ b/weechat_irc.conf
@@ -168,7 +168,7 @@ freenode.realname
 freenode.local_hostname
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#archlinux,#python,#zeronet,#i3,#g0v.tw,#manjaro,#python.tw,#kali-linux"
+freenode.autojoin = "#archlinux,#python,#zeronet,#i3,#g0v.tw,#manjaro,#python.tw,#kali-linux,#gnupg"
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
