--- a/i3/config
+++ b/i3/config
@@ -40,7 +40,7 @@ bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute s
 
 # Sreen displays & brightness
 exec --no-startup-id xrandr --output eDP1 --mode 1680x1050
-exec --no-startup-id light -S 20
+exec --no-startup-id xbacklight = 13
 
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
