--- a/i3/config
+++ b/i3/config
@@ -43,7 +43,8 @@ exec --no-startup-id xrandr --output eDP1 --mode 1680x1050
 exec --no-startup-id xbacklight = 13
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+# bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec xfce4-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
