--- a/i3/config
+++ b/i3/config
@@ -32,6 +32,7 @@ floating_modifier $mod
 # Network and sound applets
 # exec --no-startup-id /usr/bin/blueman-applet
 exec --no-startup-id /usr/bin/nm-applet
+exec --no-startup-id firefox
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
@@ -45,6 +46,8 @@ exec --no-startup-id xbacklight = 13
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec xfce4-terminal
+exec --no-startup-id xfce4-terminal
+
 
 # kill focused window
 bindsym $mod+Shift+q kill
