--- a/i3/config
+++ b/i3/config
@@ -29,25 +29,24 @@ font pango:monospace 16
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# Network and sound applets
-# exec --no-startup-id /usr/bin/blueman-applet
+# Auto startup applications
+exec --no-startup-id i3-msg 'workspace 1; exec xfce4-terminal'
+exec --no-startup-id i3-msg 'workspace 2; exec firefox'
 exec --no-startup-id /usr/bin/nm-applet
-exec --no-startup-id firefox
+exec i3-msg workspace 1
+for_window [class=".*"] fullscreen enable
+
+# Sreen displays & brightness
+exec --no-startup-id xrandr --output eDP1 --mode 1400x900
+exec --no-startup-id xbacklight = 13
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
-# Sreen displays & brightness
-exec --no-startup-id xrandr --output eDP1 --mode 1400x900
-exec --no-startup-id xbacklight = 13
-
-# start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec xfce4-terminal
-exec --no-startup-id xfce4-terminal
-
 
 # kill focused window
 bindsym $mod+Shift+q kill
